# QA_Chat_Bot-

./: README.md  main.py  pyproject.toml
data/files/: 01_LLM_Theory_Notes.md  AI Sample questions.docx  Harshil_Kareliya_Resume2.docx
notebooks/: RAG_Chatbot_Advanced.ipynb  qa_chatbot.ipynb  qa_chatbot2.ipynb
streamlit/: app.py  rag.py
