[project]
name = "qa-chatboat"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.5.9",
    "docx2txt>=0.9",
    "faiss-cpu>=1.14.3",
    "fastapi>=0.137.1",
    "google-generativeai>=0.8.6",
    "ipykernel>=7.3.0",
    "ipywidgets>=8.1.8",
    "langchain>=1.3.9",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.7",
    "langchain-faiss>=0.1.1",
    "langchain-google-genai>=4.2.5",
    "langchain-huggingface>=1.2.2",
    "langchain-ollama>=1.1.0",
    "langchain-openai>=1.3.2",
    "pypdf>=6.13.2",
    "python-dotenv>=1.2.2",
    "sentence-transformers>=5.5.1",
    "streamlit>=1.58.0",
    "unstructured>=0.23.1",
]

fileWatcherType = "none"
 
[browser]
gatherUsageStats = false